--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "eslint": "^7.28.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.28.0"
   }
 }
