--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,9 @@ services:
       - "9090:9090"
     networks:
       - local
+    deploy:
+      placement:
+        constraints: [node.role == manager]
       
   grafana:
     image: grafana/grafana:latest
@@ -41,6 +44,9 @@ services:
     user: "104"
     networks:
       - local
+    deploy:
+      placement:
+        constraints: [node.role == manager]
 
 networks: 
   local:
