--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,13 +44,24 @@ services:
     user: "104"
     networks:
       - local
+      - loki
     deploy:
       placement:
         constraints: [node.role == manager]
+        
+  loki:
+    image: grafana/loki:2.0.0
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    networks:
+      - loki
+      - local
 
 networks: 
   local:
     driver: overlay
     attachable: true
+  loki:
 volumes:
   grafana-storage:
