--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,9 @@ services:
     networks:
       - loki
       - local
+    deploy:
+      placement:
+        constraints: [node.role == manager]
 
 networks: 
   local:
